# Test-ryu

./: .gitmodules  CONTRIBUTING.md  Directory.Packages.props  README.md  build_openssl.sh  global.json  nuget.config  oboe_audio_renderer.cpp
.github/workflows/: 1  1.yml  10.yml  2.yml  3.yml  4.yml  Android  Android 1.yml  Android build.yml  Android.yml  android-build.yml  android-ci.yml  android.yml  az.yml  build.yml  main.yml  mako.yml  mirror.yml  ok.yml  pr_triage.yml  release.yml  suofang.yml
docs/workflow/: pr-guide.md
src/: CounterQueue.cs  CounterQueueEvent.cs
src/ARMeilleure/: ARMeilleure.csproj  Optimizations.cs
src/LibRyujinx/: ISurfaceFlingerRegistry.cs  LibRyujinx.Device.cs  LibRyujinx.Graphics.cs  LibRyujinx.Input.cs  LibRyujinx.Native.cs  LibRyujinx.cs  LibRyujinx.csproj  SurfaceFlingerRegistryAdapter.cs  VirtualTouchScreen.cs  VulkanLoader.cs  rd.xml
src/LibRyujinx.NativeSample/: LibRyujinx.NativeSample.csproj  LibRyujinxInterop.cs  NativeWindow.cs  Program.cs
src/Ryujinx.Audio/: Constants.cs  Ryujinx.Audio.csproj
src/Ryujinx.Audio.Backends.Oboe/: OboeAudioBuffer.cs  OboeAudioDriver.cs  OboeHardwareDeviceDriver.cs  OboeHardwareDeviceSession.cs  Ryujinx.Audio.Backends.Oboe.csproj
src/Ryujinx.Audio.Backends.OpenAL/: OpenALHardwareDeviceDriver.cs  OpenALHardwareDeviceSession.cs  OpenALLibraryNameContainer.cs  Ryujinx.Audio.Backends.OpenAL.csproj
src/Ryujinx.Audio.Backends.SDL2/: Ryujinx.Audio.Backends.SDL2.csproj  SDL2HardwareDeviceDriver.cs  SDL2HardwareDeviceSession.cs
src/Ryujinx.Audio.Backends.SoundIo/: Ryujinx.Audio.Backends.SoundIo.csproj
src/Ryujinx.Common/: ReactiveObject.cs  Ryujinx.Common.csproj  XXHash128.cs
src/Ryujinx.Core/: GlobalConfig.cs  ISurfaceFlinger.cs  ISurfaceFlingerRegistry.cs  MemoryBarrierSettings.cs  Ryujinx.Core.csproj  SurfaceFlingerRegistry.cs
src/Ryujinx.Cpu/: AddressSpace.cs  ICpuContext.cs  ITickSource.cs  MemoryEhMeilleure.cs  Ryujinx.Cpu.csproj  TickSource.cs
src/Ryujinx.Graphics.Device/: DeviceState.cs  Ryujinx.Graphics.Device.csproj
src/Ryujinx.Graphics.GAL/: Capabilities.cs  Format.cs  IPipeline.cs  IWindow.cs  Ryujinx.Graphics.GAL.csproj  UpscaleType.cs  VSyncMode.cs
src/Ryujinx.Graphics.Gpu/: GpuContext.cs  GraphicsConfig.cs  Ryujinx.Graphics.Gpu.csproj
src/Ryujinx.Graphics.Host1x/: Ryujinx.Graphics.Host1x.csproj
src/Ryujinx.Graphics.Nvdec/: H264Decoder.cs  HardwareDecoder.cs  NvdecDevice.cs  Ryujinx.Graphics.Nvdec.csproj  Vp9Decoder.cs
src/Ryujinx.Graphics.Nvdec.FFmpeg/: AndroidHardwareConfig.cs  AndroidJavaClass.cs  AndroidJni.cs  FFmpegContext.cs  FFmpegContextFactory.cs  FFmpegDecoderFactory.cs  FFmpegErrors.cs  FFmpegHardwareDecoder.cs  HardwareDecoder.cs  HardwareDecoderHelper.cs  HardwareDecoderManager.cs  HardwareSurface.cs  IVideoDecoder.cs  SimpleSurface.cs  Surface.cs
src/Ryujinx.Graphics.Nvdec.MediaCodec/: AndroidJniWrapper.cs  CommonTypes.cs  GL.cs  MediaCodecTypes.cs  Ryujinx.Graphics.Nvdec.MediaCodec.csproj  VulkanNative.cs
src/Ryujinx.Graphics.Nvdec.Vp9/: BitDepth.cs  CodecErr.cs  Constants.cs  DSubExp.cs  DecodeFrame.cs  DecodeMv.cs  Decoder.cs  Detokenize.cs  Entropy.cs  EntropyMode.cs  EntropyMv.cs  Idct.cs  LoopFilter.cs  Luts.cs  PredCommon.cs  Prob.cs  QuantCommon.cs  ReconInter.cs  ReconIntra.cs  Ryujinx.Graphics.Nvdec.Vp9.csproj
src/Ryujinx.Graphics.OpenGL/: BackgroundContextWorker.cs  EnumConversion.cs  OpenGLRenderer.cs  PersistentBuffers.cs  Pipeline.cs  Program.cs  Ryujinx.Graphics.OpenGL.csproj  Sync.cs
src/Ryujinx.Graphics.Shader/: AttributeDiagnosticService.cs  AttributeType.cs  IGpuAccessor.cs  ILogger.cs  Ryujinx.Graphics.Shader.csproj
src/Ryujinx.Graphics.Texture/: Ryujinx.Graphics.Texture.csproj
src/Ryujinx.Graphics.Vic/: Ryujinx.Graphics.Vic.csproj
src/Ryujinx.Graphics.Video/: Ryujinx.Graphics.Video.csproj
src/Ryujinx.Graphics.Vulkan/: Auto.cs  BarrierBatch.cs  BitMap.cs  BitMapStruct.cs  BufferAllocationType.cs  BufferHolder.cs  BufferManager.cs  BufferUsageBitmap.cs  CacheByRange.cs  CircularBufferHolder.cs  CircularBufferWrapperHolder.cs  CommandBufferPool.cs  CommandBufferScoped.cs  DescriptorSetManager.cs  DescriptorSetUpdater.cs  FenceHelper.cs  FenceHolder.cs  FormatCapabilities.cs  FormatTable.cs  FramebufferParams.cs  HardwareCapabilities.cs  HashTableSlim.cs  HelperShader.cs  HostMemoryAllocator.cs  MemoryAllocation.cs  MemoryAllocator.cs  MemoryAllocatorBlockList.cs  MultiFenceHolder.cs  PipelineBase.cs  PipelineCacheManager.cs  PipelineConverter.cs  PipelineDynamicState.cs  PipelineFull.cs  PipelineHelperShader.cs  PipelineLayoutCache.cs  PipelineLayoutCacheEntry.cs  PipelineState.cs  RenderPassHolder.cs  Ryujinx.Graphics.Vulkan.csproj  SamplerHolder.cs  (+20 more)
src/Ryujinx.HLE/: HLEConfiguration.cs  MemoryConfiguration.cs  PerformanceStatistics.cs  Ryujinx.HLE.csproj  Ryujinx.HLE.xml  Switch.cs  TrimmingSettings.xml
src/Ryujinx.HLE.Generators/: CodeGenerator.cs  DeviceFileGenerator.cs  IpcServiceGenerator.cs  Ryujinx.HLE.Generators.csproj  ServiceSyntaxReceiver.cs
src/Ryujinx.Headless.SDL2/: Options.cs  Program.cs  Ryujinx.Headless.SDL2.csproj  StatusUpdatedEventArgs.cs  WindowBase.cs
src/Ryujinx.Horizon.Common/: Ryujinx.Horizon.Common.csproj
src/RyujinxAndroid/app/src/main/cpp/: CMakeLists.txt  DynamicAudioQueue.cpp  DynamicAudioQueue.h  FFmpegHardwareDecoder.cpp  FFmpegHardwareDecoder.h  FFmpegHardwareJNI.cpp  LockFreeQueue.h  OboeHardwareDeviceDriver.cs  ffmpeg_adapter.cpp  ffmpeg_hw_jni.cpp  ffmpeg_hw_jni.h  ffmpeg_static_wrapper.cpp  hardware_decoder.cpp  hardware_decoder.h  oboe_audio_renderer.cpp  oboe_audio_renderer.h  oboe_jni.cpp  ryuijnx.h  ryujinx.cpp  simple_hardware_decoder.cpp  stabilized_audio_callback.cpp  stabilized_audio_callback.h  vulkan_wrapper.cpp  vulkan_wrapper.h
src/RyujinxAndroid/app/src/main/cpp/mediacodec/: mediacodec_common.cpp  mediacodec_common.h  mediacodec_decoder.cpp  mediacodec_decoder.h  mediacodec_h264.cpp  mediacodec_jni.cpp  mediacodec_vp8.cpp  mediacodec_vp9.cpp  yuv_converter.cpp
src/RyujinxAndroid/app/src/main/cpp/shaders/: ColorBlitVertex.vert  present_mmpx.frag
(+773 files in other folders)
